Add more unit tests for the service layer